tests/fixtures/invalid/sum_int.py
# Cannot call sum() with Int
x = sum(1)
